Run CI tests for 32 bit
See https://github.com/anacrolix/missinggo/issues/16

(cherry picked from commit c0ccd22e96446cada955be47b1a9273ad5dc1cc7)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
       - run: go get -d ./...
       - run: go test -bench . -count 2 ./... -v -race
       - run: go test -bench . -count 2 ./...
+      - run: GOARCH=386 go test -bench . -count 2 ./... -v
       - save_cache:
           key: go-pkg-{{ checksum "go.mod" }}
           paths:
